--- a/JavaScript/method/获取元素offsetTop.html
+++ b/JavaScript/method/获取元素offsetTop.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>offsetTop</title>
   <style>
-    * {
+    html, body, div, p {
       margin: 0;
       padding: 0;
     }
