toggle change to add is better

--- a/JavaScript/concept/event_object.html
+++ b/JavaScript/concept/event_object.html
@@ -31,7 +31,7 @@
 
 				// 通过事件对象给当前点击的元素添加class
 				console.log(ev.target);
-				ev.target.classList.toggle('active');
+				ev.target.classList.add('active');
 				// console.log(this); // 这里的this是window，怎么让它是当前点击的li？
 			} 
 		// }
