--- a/other/Vue/vue组件示例代码/组件中的data必需是函数（正确示例）.html
+++ b/other/Vue/vue组件示例代码/组件中的data必需是函数（正确示例）.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id="app">
-    <p>注册局部组件</p>
+    <p>vue组件</p>
     <my-component></my-component>
     <my-component></my-component>
     <my-component></my-component>
