data在组件中非函数报错

--- a/other/Vue/vue组件示例代码/index.html
+++ b/other/Vue/vue组件示例代码/index.html
@@ -13,6 +13,7 @@
   <script>
     const childComponent = {
       props: ['message'],
+      data:
       template: '<div>这是从父组件传过来的数据：{{ message }}</div>',
     };
     new Vue({
