node本地服务启动，但实例文档为跨域

--- a/other/node/node搭建本地服务器/example/public/using_axios.html
+++ b/other/node/node搭建本地服务器/example/public/using_axios.html
@@ -8,7 +8,7 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
-  <div><p>111</p></div>
+  <div><p>using axios</p></div>
   <script>
     axios.get('https://api.douban.com/v2/book/6548683')
       .then(function (response) {
