--- a/JavaScript/method/cross_origin/jsonp/jsonp.html
+++ b/JavaScript/method/cross_origin/jsonp/jsonp.html
@@ -9,7 +9,7 @@
 <body>
   <p>using origin js</p>
   <script>
-  var script = document.createElement('script');
+  const script = document.createElement('script');
   script.type = 'text/javascript';
 
   // 传参并指定回调执行函数为onBack
