--- a/JavaScript/YDKJS/3.this默认绑定.html
+++ b/JavaScript/YDKJS/3.this默认绑定.html
@@ -10,6 +10,7 @@
 
 <body>
   <p>在开发这工具中设置断点，查看函数调用栈：通过 source 菜单，同时可以看到 this 指向</p>
+  <p>另外，此三处 this 都是默认绑定，指向 window</p>
   <script>
     function baz() {
       console.log('baz');
