--- a/09_Utilties/2_ui_component/02_fullPageScroll/index.html
+++ b/09_Utilties/2_ui_component/02_fullPageScroll/index.html
@@ -56,6 +56,7 @@
       margin: 15px 0;
       border-radius: 50%;
       cursor: pointer;
+      transition: all 500ms ease;
     }
 
     .nav p.active {
