full page scroll加点动画

--- a/09_Utilties/2_ui_component/02_fullPageScroll/index.html
+++ b/09_Utilties/2_ui_component/02_fullPageScroll/index.html
@@ -50,17 +50,22 @@
     }
 
     .nav p {
-      width: 15px;
-      height: 15px;
+      width: 8px;
+      height: 8px;
       background-color: #fff;
-      margin: 15px 0;
+      margin: 15px auto;
       border-radius: 50%;
       cursor: pointer;
       transition: all 500ms ease;
+      box-shadow: 0 0 4px #fff;
     }
 
     .nav p.active {
+      width: 12px;
+      height: 12px;
       background-color: #000;
+      box-shadow: 0 0 6px #000;
+
     }
   </style>
 </head>
