--- a/09_Utilties/2_ui_component/02_fullPageScroll/index.html
+++ b/09_Utilties/2_ui_component/02_fullPageScroll/index.html
@@ -6,68 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>全屏滚动</title>
-  <style>
-    * {
-      padding: 0;
-      margin: 0;
-    }
-
-    #wrap {
-      width: 100%;
-      height: 100vh;
-      overflow: hidden;
-    }
-
-    #main {
-      position: relative;
-      top: 0;
-      transition: all 500ms ease;
-    }
-
-    .page {
-      width: 100%;
-      height: 100vh;
-    }
-
-    .page1 {
-      background-color: red;
-    }
-
-    .page2 {
-      background-color: yellow;
-    }
-
-    .page3 {
-      background-color: green;
-    }
-
-    .nav {
-      position: fixed;
-      top: 50%;
-      right: 10px;
-      width: 15px;
-      transform: translateY(-50%);
-    }
-
-    .nav p {
-      width: 8px;
-      height: 8px;
-      background-color: #fff;
-      margin: 15px auto;
-      border-radius: 50%;
-      cursor: pointer;
-      transition: all 500ms ease;
-      box-shadow: 0 0 4px #fff;
-    }
-
-    .nav p.active {
-      width: 12px;
-      height: 12px;
-      background-color: #000;
-      box-shadow: 0 0 6px #000;
-
-    }
-  </style>
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
@@ -79,155 +18,7 @@
     </div>
   </div>
 
-  <script>
-    // import EventUtil from "./eventUtil.js";
-    // 跨浏览器事件
-    var EventUtil = {
-      addHandler: function (element, type, handler) {
-        if (element.addEventListener) {
-          element.addEventListener(type, handler, false);
-        } else if (element.attachEvent) {
-          element.attachEvent("on" + type, handler);
-        } else {
-          element["on" + type] = handler;
-        }
-      },
-      removeHandler: function (element, type, handler) {
-        if (element.removeEventListener) {
-          element.removeEventListener(type, handler, false);
-        } else if (element.detachEvent) {
-          element.detachEvent("on" + type, handler);
-        } else {
-          element["on" + type] = null;
-        }
-      },
-      getEvent: function (event) {
-        return event ? event : window.event;
-      },
-      getTarget: function (event) {
-        return event.target || event.srcElement;
-      },
-      preventDefault: function (event) {
-        if (event.preventDefault) {
-          event.preventDefault();
-        } else {
-          event.returnValue = false;
-        }
-      },
-      stopPropagation: function (event) {
-        if (event.stopPropagation) {
-          event.stopPropagation();
-        } else {
-          event.cancelBubble = true;
-        }
-      },
-
-      // 鼠标滚轮事件，不要精确判断delta的值，只判断正负，具体值不同浏览器差距太大
-      getWheelDelta: function (event) {
-        if (event.wheelDelta) {
-          return event.wheelDelta;
-        } else {
-          return -event.detail;
-        }
-      }
-    };
-
-    EventUtil.addHandler(document, "mousewheel", handleMouseWheel);
-    EventUtil.addHandler(document, "DOMMouseScroll", handleMouseWheel);
-
-    var main = document.getElementById('main');
-
-    // total pages numble
-    var pages = document.querySelectorAll('.page');
-    var pagesNum = pages.length;
-
-    var viewHeight = document.body.clientHeight;
-
-    // 如果不加时间控制，滚动会过度灵敏，一次翻好几屏 
-    var startTime = 0, // 翻屏起始时间 
-      endTime = 0,
-      now = 0;
-
-    // 滚动事件处理函数
-    function handleMouseWheel(e) {
-      e = EventUtil.getEvent(e);
-      var delta = EventUtil.getWheelDelta(e);
-      startTime = new Date().getTime();
-
-      // 最少 0.5s 翻页一次
-      if ((endTime - startTime) < -800) {
-        // 上翻
-        if (delta <
-          0 && main.offsetTop > -(viewHeight * (pagesNum - 1))) {
-          now = now - viewHeight;
-          turnPage(now);
-          changeNav(now);
-        }
-
-        // 下翻
-        if (delta >
-          0 && main.offsetTop < 0) {
-          now = now + viewHeight;
-          turnPage(now);
-          changeNav(now);
-        }
-        endTime = new Date().getTime();
-      } else {
-        EventUtil.preventDefault(e)
-      }
-    }
-
-    function turnPage(height) {
-      main.style.top = height + 'px';
-    }
-
-    // 创建右侧导航
-
-    // 创建导航DOM
-    var nav = document.createElement('div');
-    nav.className = 'nav';
-
-    for (var i = 0; i < pagesNum; i++) {
-      nav.innerHTML += '<p class="nav-dot"></p>';
-    }
-    main.appendChild(nav);
-
-    var navDots = document.querySelectorAll('.nav-dot');
-    navDots = Array.prototype.slice.call(navDots);
-
-    // 添加初始样式
-    navDots[0].classList.add('active');
-
-    // 删除 类名
-    function deleteClassName(el, className) {
-      if (el.classList.contains(className)) {
-        el.classList.remove(className);
-      }
-    }
-
-    // 随页面滚动改变样式
-    function changeNav(height) {
-      navDots.forEach(function (el) {
-        deleteClassName(el, 'active')
-      })
-
-      var i = -(height / viewHeight);
-      navDots[i].classList.add('active');
-    }
-
-    // 添加点击事件
-    navDots.forEach(function (el, i) {
-      EventUtil.addHandler(el, "click", function () {
-        turnPage(-(i * viewHeight));
-        navDots.forEach(function (el) {
-          deleteClassName(el, 'active')
-        })
-
-        el.classList.add('active');
-
-      });
-    })
-  </script>
+  <script type="module" src="./js/index.js"></script>
 </body>
 
 </html>
