调整名称，优化html

--- a/09_Utilties/2_ui_component/02_fullPageScroll/index.html
+++ b/09_Utilties/2_ui_component/02_fullPageScroll/index.html
@@ -10,14 +10,11 @@
 </head>
 
 <body>
-  <div id="wrap">
-    <div id="main">
-      <div class="page page1"></div>
-      <div class="page page2"></div>
-      <div class="page page3"></div>
-    </div>
+  <div id="pureFullPage">
+    <div class="page"></div>
+    <div class="page"></div>
+    <div class="page"></div>
   </div>
-
   <script type="module" src="./js/index.js"></script>
 </body>
 
