前端路由/vue响应式再理解

--- a/01_JavaScript/1_method/52.拖拽/1.拖动1.html
+++ b/01_JavaScript/1_method/52.拖拽/1.拖动1.html
@@ -31,6 +31,7 @@
     body.addEventListener('mousedown', ev => {
       // className 既能获取也能设置
       if (ev.target.className.indexOf('draggable') > -1) {
+        console.log(ev.target, ev.currentTarget);
         dragging = ev.target;
         diffX = ev.clientX - dragging.offsetLeft;
         diffY = ev.clientY - dragging.offsetTop;
@@ -45,8 +46,6 @@
     body.addEventListener('mouseup', ev => {
       dragging = null;
     });
-
-
   </script>
 </body>
 
